--- a/.env.example
+++ b/.env.example
@@ -29,11 +29,11 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailhog
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
+MAIL_HOST=smtp.mailtrap.io
+MAIL_PORT=2525
+MAIL_USERNAME=46508b6fcafd70
+MAIL_PASSWORD=1128c29ae5013b
+MAIL_ENCRYPTION=tls
 MAIL_FROM_ADDRESS="micael@checklist.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
@@ -56,3 +56,5 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+QUEUE_CONNECTION=database
